php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #31107 Complile failure on Solaris 9 (Intel) and gcc 3.4.3
Submitted: 2004-12-16 02:22 UTC Modified: 2004-12-17 01:44 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:0 (0.0%)
Same OS:0 (0.0%)
From: nyama152 at yahoo dot com Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.0.3 OS: Solaris 9 (Intel)
Private report: No CVE-ID: None
 [2004-12-16 02:22 UTC] nyama152 at yahoo dot com
Description:
------------
On Solaris 9 (Intel) and gcc 3.4.3, I configured as

                ./configure --with-apxs2=/usr/local/apache2/bin/apxs \
                --enable-trans-sid \
		--enable-zend-multibyte --enable-mbstring --enable-mbstr-enc-trans \
                --enable-track-vars \
		--enable-force-cgi-redirect


I got the following error:

/bin/sh /export/home/hoge/php-5.0.3/libtool --silent --preserve-dup-deps --mode=compile gcc  -IZend/ -I/export/home/hoge/php-5.0.3/Zend/ -DPHP_ATOM_INC -I/export/home/hoge/php-5.0.3/include -I/export/home/hoge/php-5.0.3/main -I/export/home/hoge/php-5.0.3 -I/export/home/hoge/php-5.0.3/Zend -I/usr/local/include/libxml2 -I/export/home/hoge/php-5.0.3/ext/mbstring/oniguruma -I/export/home/hoge/php-5.0.3/ext/mbstring/libmbfl -I/export/home/hoge/php-5.0.3/ext/mbstring/libmbfl/mbfl  -D_POSIX_PTHREAD_SEMANTICS -I/export/home/hoge/php-5.0.3/TSRM  -g -O2  -prefer-pic -c /export/home/hoge/php-5.0.3/Zend/zend_strtod.c -o Zend/zend_strtod.lo 
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:239: error: parse error before "u_int32_t"
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:239: warning: no semicolon at end of struct or union
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:240: warning: data definition has no type or storage class
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:386: error: parse error before "u_int32_t"
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:386: warning: no semicolon at end of struct or union
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `Balloc':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:405: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:409: error: invalid application of `sizeof' to incomplete type `/export/home/hoge/php-5.0.3/Zend/zend_strtod.c' 
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:410: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:411: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:413: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:413: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `Bfree':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:426: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:426: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:427: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `multadd':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:443: error: `u_int32_t' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:443: error: (Each undeclared identifier is reported only once
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:443: error: for each function it appears in.)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:443: error: `x' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:443: error: `y' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:445: error: parse error before "xi"
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:449: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:450: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:454: error: `xi' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:456: error: `z' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:467: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:468: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:469: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:469: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:469: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:473: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:474: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: At top level:
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:484: error: parse error before "u_int32_t"
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `s2b':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:491: error: `nd' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:495: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:495: error: `y9' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:496: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:504: error: `nd0' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:505: error: `s' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: At top level:
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:522: error: parse error before "x"
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `hi0bits':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:527: error: `x' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: At top level:
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:556: error: parse error before '*' token
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `lo0bits':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:560: error: syntax error before "x"
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:562: error: `x' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:566: error: `y' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `i2b':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:610: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:611: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `mult':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:625: error: `u_int32_t' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:625: error: parse error before "carry"
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:626: error: `x' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:626: error: `xa' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:626: error: `xae' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:626: error: `xb' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:626: error: `xbe' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:626: error: `xc' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:626: error: `xc0' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:628: error: parse error before "z2"
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:631: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:631: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:636: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:637: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:638: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:640: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:643: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:645: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:647: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:649: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:652: error: `y' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:655: error: `carry' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:657: error: `z' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:659: error: `z2' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:698: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:699: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `pow5mult':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:725: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:735: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:736: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:737: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `lshift':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:754: error: `u_int32_t' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:754: error: `x' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:754: error: `x1' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:754: error: `xe' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:754: error: `z' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:761: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:762: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:763: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:766: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:769: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:770: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:799: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `cmp':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:812: error: `u_int32_t' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:812: error: `xa' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:812: error: `xa0' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:812: error: `xb' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:812: error: `xb0' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:815: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:816: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:825: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:827: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `diff':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:849: error: `u_int32_t' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:849: error: `xa' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:849: error: `xae' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:849: error: `xb' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:849: error: `xbe' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:849: error: `xc' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:857: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:858: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:869: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:870: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:871: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:872: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:874: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:875: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:877: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:916: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `ulp':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:928: error: parse error before "x"
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:930: error: parse error before "a"
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:932: error: `x' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:940: error: `a' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `b2d':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:968: error: `u_int32_t' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:968: error: `xa' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:968: error: `xa0' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:968: error: `w' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:968: error: `y' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:968: error: `z' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:970: error: parse error before "d"
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:978: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:979: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:988: error: `d' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `d2b':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1040: error: `u_int32_t' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1040: error: `x' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1040: error: `y' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1040: error: `z' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1041: error: parse error before "d"
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1046: error: `d' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1060: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1081: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1090: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `ratio':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1172: error: parse error before "da"
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1175: error: `da' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1176: error: `db' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1178: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1178: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c: In function `zend_strtod':
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1243: error: parse error before "rv"
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1245: error: `u_int32_t' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1245: error: parse error before "y"
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1252: error: `rv' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1277: error: `y' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1277: error: `z' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1485: error: `rv0' undeclared (first use in this function)
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1514: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1515: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1515: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1515: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1570: error: dereferencing pointer to incomplete type
/export/home/hoge/php-5.0.3/Zend/zend_strtod.c:1571: error: dereferencing pointer to incomplete type
make: *** [Zend/zend_strtod.lo] Error 1



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-12-16 09:52 UTC] derick@php.net
Can you provide me access to the machine so that I can debug it? I do not have a solaris 9/intel box to test / debug with.

Derick
 [2004-12-16 14:07 UTC] derick@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

And thanks for the account! It would be useful if I could retain it to test other OS/Platform specific patches in the future.
 [2004-12-17 01:44 UTC] nyama152 at yahoo dot com
Thank you very much for your help. This machine is our departmental server, so I think I should close your account.
If you need one, please let me know. Thank you again for PHP developers.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 17 23:00:02 2026 UTC