- MF43: Fixed bug #31107 (strtod on solaris9/intel)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@174891 c90b9560-bf6c-de11-be94-00142212c4b1